--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -7,6 +7,15 @@
     tools:context="hr.ferit.vedran.factorynewsreader.UI.NewsActivity"
     android:background="@android:color/white">
 
+    <ProgressBar
+        android:id="@+id/pbLoader"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:progressDrawable="@drawable/circular_progress"
+        android:layout_centerInParent="true" />
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/rvFeed"
