--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -2,41 +2,34 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/imageHeight"
     android:background="@android:color/white">
 
     <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="@dimen/imageWidth"
+        android:layout_height="@dimen/imageHeight"
         android:id="@+id/image"
         android:src="@color/colorPrimaryDark"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"/>
 
     <TextView
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/tvMargin"
+        android:layout_marginEnd="@dimen/tvMargin"
+        android:layout_marginTop="@dimen/tvMarginTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="The Black Chirpator"
         android:id="@+id/title"
-        android:maxLines="2"
-        android:textSize="18sp"
+        android:textSize="@dimen/titleTextSize"
+        android:lineSpacingMultiplier="1.15"
         android:textColor="@color/textColorDark"
         android:layout_toEndOf="@+id/image"/>
 
-    <TextView
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:text="Text Description"
-        android:id="@+id/description"
-        android:textSize="18sp"
-        android:textColor="@color/textColorSecondary"
+    <RelativeLayout
         android:layout_toEndOf="@+id/image"
-        android:layout_below="@+id/title"/>
+        android:background="@drawable/gradient"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
 </RelativeLayout>
